[package]
name = "HackerOS-Containers"
version = "0.3.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "MIT"
description = "HackerOS Containers: Advanced container management tool for HackerOS with isolation, resource management, and real-time monitoring."
repository = "https://github.com/HackerOS-Linux-System/HackerOS-Containers"

[dependencies]
lexopt = "0.3.0"
owo-colors = "3.5.0"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For state management
nix = { version = "0.28.0", features = ["process", "sched", "fs", "signal", "mount", "user", "net", "ioctl", "hostname"] }
oci-spec = "0.5.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] } # For unique container IDs
nom = "7.1" # For parsing .hk files
flate2 = "1.0" # For unpacking images
tar = "0.4" # For unpacking images
ureq = "2.9" # Lightweight HTTP client for downloading images (blocking)
once_cell = "1.18"
